New req type and subtype added, New material rebuild, approval title changed and some bug fixed

--- a/KGERP/Views/BillRequisition/DirectorBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/DirectorBRApproveSlave.cshtml
@@ -2,7 +2,7 @@
 @using KGERP.Utility;
 
 @{
-    ViewData["Title"] = "Project Manager Requisition Approval";
+    ViewData["Title"] = "Requisition : Director Approval";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     int sl = 0;
