--- a/KGERP/Views/BillRequisition/ITHeadBRApprovalList.cshtml
+++ b/KGERP/Views/BillRequisition/ITHeadBRApprovalList.cshtml
@@ -2,7 +2,7 @@
 @using KGERP.Utility;
 
 @{
-    ViewData["Title"] = "Project Manager Requisition Approval List";
+    ViewData["Title"] = "Head of Department Approval List";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     int sl = 0;
@@ -18,16 +18,14 @@
 <section class="content-header">
     <h1>
         <span>
-            Requisition List :Head of IT Approval
+            Head of Department Approval List
         </span>
 
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
         <li class="active">
-            @*<a href="~/Procurement/DealerSalesOrderSlave?companyId=@Model.CompanyFK&orderMasterId=0" class="btn btn-primary pull-right">
-                <span class="fs fs-plus"></span> New Sales Invoice
-            </a>*@
+            Head of Department Approval List
         </li>
     </ol>
 </section>
