--- a/KGERP/Views/BillRequisition/MDBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/MDBRApproveSlave.cshtml
@@ -2,12 +2,11 @@
 @using KGERP.Utility;
 
 @{
-    ViewData["Title"] = "MD Requisition Approval";
+    ViewData["Title"] = "Requisition : Managing Director Approval";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     int sl = 0;
     decimal? totalPrice = 0;
-
 }
 
 <style type="text/css">
@@ -20,12 +19,14 @@
 <section class="content-header">
     <h1>
         <span>
-            Requisition : MD Approval
+            Requisition : Managing Director Approval
         </span>
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Requisition : MD Approval</li>
+        <li class="active">
+            Requisition : Managing Director Approval
+        </li>
     </ol>
 </section>
 
