--- a/KGERP/Views/BillRequisition/PDBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/PDBRApproveSlave.cshtml
@@ -2,7 +2,7 @@
 @using KGERP.Utility;
 
 @{
-    ViewData["Title"] = "Project Manager Requisition Approval";
+    ViewData["Title"] = "Requisition : Project Director Approval";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     int sl = 0;
@@ -20,12 +20,14 @@
 <section class="content-header">
     <h1>
         <span>
-            Requisition : PD Approval
+            Requisition : Project Director Approval
         </span>
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active"> Requisition : PD Approval</li>
+        <li class="active">
+            Requisition : Project Director Approval
+        </li>
     </ol>
 </section>
 
