--- a/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
+++ b/KGERP/Views/BillRequisition/PMBRApproveSlave.cshtml
@@ -2,12 +2,11 @@
 @using KGERP.Utility;
 
 @{
-    ViewData["Title"] = "Project Manager Requisition Approval";
+    ViewData["Title"] = "Requisition : Project Manager Approval";
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     int sl = 0;
     decimal? totalPrice = 0;
-
 }
 
 <style type="text/css">
@@ -20,12 +19,14 @@
 <section class="content-header">
     <h1>
         <span>
-            Project Manager Requisition Approval
+            Requisition : Project Manager Approval
         </span>
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Project Manager Requisition Approval</li>
+        <li class="active">
+            Requisition : Project Manager Approval
+        </li>
     </ol>
 </section>
 
