Requisition type and subtype crud done

--- a/KGERP/Views/Configuration/CommonRawProductCategory.cshtml
+++ b/KGERP/Views/Configuration/CommonRawProductCategory.cshtml
@@ -84,7 +84,7 @@
                                         @{int sl = 0;
                                         }
                                         <tbody>
-                                            @foreach (var item in Model.DataList)
+                                            @foreach (var item in Model.DataList.OrderBy(c=>c.Name))
                                             {
                                                 <tr>
                                                     <td>@(++sl)</td>
